--- a/MusicFlow/Views/AlbumDetail.xaml
+++ b/MusicFlow/Views/AlbumDetail.xaml
@@ -52,20 +52,21 @@
                     <GridView.ItemContainerStyle>
                         <Style TargetType="GridViewItem">
                             <Setter Property="HorizontalAlignment" Value="Stretch" />
+                            <Setter Property="Padding" Value="0" />
                             <Setter Property="Background" Value="#66808080" />
                             <Setter Property="Margin" Value="8,8,8,8" />
                         </Style>
                     </GridView.ItemContainerStyle>
                     <GridView.ItemTemplate>
                         <DataTemplate x:DataType="model:Song">
-                            <Grid Width="440" Height="28" ToolTipService.ToolTip="{x:Bind Title}">
+                            <Grid Width="520" Height="44" PointerEntered="Grid_PointerEntered" PointerExited="Grid_PointerExited">
                                 <Rectangle Fill="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                                <RelativePanel Name="rp1">
-                                    <TextBlock Name="TB1" Text="{x:Bind TrackNo}" VerticalAlignment="Center" Margin="8,0,0,0" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                                    <TextBlock Name="TB2" Text="{x:Bind Title}" VerticalAlignment="Center" Margin="12,0,0,0" MaxWidth="220" RelativePanel.RightOf="TB1" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                                    <Button Name="B1" Content="+" RelativePanel.RightOf="TB2" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="8,0,0,0" Click="B1_Click"/>
-                                    <TextBlock Name="TB3" Text="{x:Bind Artist}" Margin="12,0,40,0" RelativePanel.LeftOf="TB4" MaxWidth="150" RelativePanel.AlignVerticalCenterWithPanel="True" />
-                                    <TextBlock Name="TB4" Text="{x:Bind Length}" Margin="8,0,8,0" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True" />
+                                <RelativePanel Name="rp1" >
+                                    <TextBlock Name="TB1" Text="{x:Bind TrackNo}" Width="8" VerticalAlignment="Center" Margin="8,0,0,0" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
+                                    <TextBlock Name="TB2" Text="{x:Bind Title}" Width="292" VerticalAlignment="Center" Margin="12,0,0,0" MaxWidth="220" RelativePanel.RightOf="TB1" RelativePanel.AlignVerticalCenterWithPanel="True" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{x:Bind Title}"/>
+                                    <Button Name="B1" Content="&#xE710;" Width="40" FontFamily="Segoe MDL2 Assets" Style="{StaticResource AddToPlayListButton}" RelativePanel.RightOf="TB2" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="8,0,0,0" Click="B1_Click" Background="Transparent" Visibility="Collapsed" ToolTipService.ToolTip="Add to now playing"/>
+                                    <TextBlock Name="TB3" Text="{x:Bind Artist}" Width="100" Margin="12,0,0,0" RelativePanel.LeftOf="TB4" RelativePanel.AlignVerticalCenterWithPanel="True" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{x:Bind Artist}" />
+                                    <TextBlock Name="TB4" Text="{x:Bind Length}" Width="28" Margin="12,0,8,0" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
                                 </RelativePanel>
                             </Grid>
                         </DataTemplate>
