--- a/MusicFlow/MainPage.xaml
+++ b/MusicFlow/MainPage.xaml
@@ -32,7 +32,14 @@
 
         <Frame Name="MainFrame" Margin="0,0,0,72" />
         <Grid Height="72" HorizontalAlignment="Stretch" VerticalAlignment="Bottom">
-            <StackPanel Orientation="Horizontal" Margin="4,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left">
+            <StackPanel 
+                Orientation="Horizontal" 
+                Margin="4,0,0,0" 
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"
+                AllowDrop="True"
+                DragOver="StackPanel_DragOver"
+                Drop="StackPanel_Drop" Background="#00000000">
                 <Image Name="npCoverImage" Height="66" Width="66" RenderTransformOrigin="0.5,0.5">
                     <Image.Projection>
                         <PlaneProjection />
@@ -53,10 +60,10 @@
                 </StackPanel>
             </StackPanel >
             <StackPanel Orientation="Horizontal" Width="200" HorizontalAlignment="Right">
-                <Button Name="PreviousButton" Content="&#xE100;" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="PreviousButton_Click" />
-                <Button Name="PlayButton" Content="&#xE102;" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="Button_Click_1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <Button Name="NextButton" Content="&#xE101;" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="Button_Click_2" />
-                <Button Name="ListButton" Content="&#xE142;" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="Button_Click">
+                <Button Name="PreviousButton" Content="&#xE100;" x:FieldModifier="public" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="PreviousButton_Click" />
+                <Button Name="PlayButton" Content="&#xE102;" x:FieldModifier="public" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="PlayButton_Click" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Button Name="NextButton" Content="&#xE101;" x:FieldModifier="public" FontFamily="Segoe MDL2 Assets" Width="40" Height="40" Click="NextButton_Click" />
+                <Button Name="ListButton" Content="&#xE142;" x:FieldModifier="public" FontFamily="Segoe MDL2 Assets" Width="40" Height="40">
                     <Button.Flyout>
                         <Flyout Placement="Top">
                             <Flyout.FlyoutPresenterStyle>
