--- a/MusicFlow/Views/AlbumDetail.xaml
+++ b/MusicFlow/Views/AlbumDetail.xaml
@@ -6,21 +6,14 @@
     xmlns:model="using:MusicFlow.Model"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-    
+    mc:Ignorable="d">    
 
     <Grid Name="rootGrid" >
          <ScrollViewer x:Name="scrollViewer" VerticalScrollBarVisibility="Auto" VerticalScrollMode="Auto" HorizontalAlignment="Stretch">
 
-            <StackPanel Orientation="Vertical" Margin="0,0,0,72" HorizontalAlignment="Stretch">
+            <StackPanel Orientation="Vertical"  HorizontalAlignment="Stretch">
                 
-                <Grid Name="AlbumInfo" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Margin="40,20,0,20">                    
-                    <Grid.ChildrenTransitions>
-                        <TransitionCollection>
-                            <EntranceThemeTransition IsStaggeringEnabled="True" />
-                            <RepositionThemeTransition />
-                        </TransitionCollection>
-                    </Grid.ChildrenTransitions>
+                <Grid Name="AlbumInfo" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Margin="40,20,0,20">                      
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
