Added background playback for RS1

--- a/MusicFlow/Views/AlbumDetail.xaml
+++ b/MusicFlow/Views/AlbumDetail.xaml
@@ -18,7 +18,7 @@
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Image x:Name="image" Height="200" Width='200' VerticalAlignment="Center" HorizontalAlignment="Center" Stretch="UniformToFill" Margin="20" Source="{x:Bind song1.AlbumCover}" Transitions="{x:Null}" />
+                    <Image x:Name="image" Height="200" Width='200' VerticalAlignment="Center" HorizontalAlignment="Center" Stretch="UniformToFill" Margin="20" Source="{x:Bind song1.CoveImagePath}" Transitions="{x:Null}" />
                     <StackPanel Grid.Column="1" Margin="12,0,0,0">
                         <TextBlock x:Name="textBlockTitle" Text="{x:Bind song1.Album}" HorizontalAlignment="Left" FontSize="36" Margin="0,20,0,0" TextWrapping="Wrap" TextAlignment="Left" />
                         <TextBlock x:Name="textBlockArtist" Text="{x:Bind song1.AlbumArtist}" HorizontalAlignment="Left" FontSize="20" Margin="0,12,0,0" TextWrapping="Wrap" TextAlignment="Left" />
@@ -30,37 +30,18 @@
                     </StackPanel>
                 </Grid>
 
-                <GridView x:Name="gridView" ScrollViewer.VerticalScrollMode="Disabled" MinHeight="200" ItemsSource="{x:Bind songs}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="40,40,40,40" SelectionMode="None" IsItemClickEnabled="True" ItemClick="ListView_ItemClick">
-                    <GridView.Transitions>
-                        <TransitionCollection>
-                            <EntranceThemeTransition />
-                        </TransitionCollection>
-                    </GridView.Transitions>
-                    <GridView.ItemContainerTransitions>
-                        <TransitionCollection>
-                            <EntranceThemeTransition IsStaggeringEnabled="True" />
-                            <RepositionThemeTransition />
-                        </TransitionCollection>
-                    </GridView.ItemContainerTransitions>
-                    <GridView.ItemContainerStyle>
-                        <Style TargetType="GridViewItem">
-                            <Setter Property="HorizontalAlignment" Value="Stretch" />
-                            <Setter Property="Padding" Value="0" />
-                            <Setter Property="Background" Value="#66808080" />
-                            <Setter Property="Margin" Value="8,8,8,8" />
-                        </Style>
-                    </GridView.ItemContainerStyle>
-                    <GridView.ItemTemplate>
-                        <DataTemplate x:DataType="model:Song">
-                            <Grid Width="520" Height="44" PointerEntered="Grid_PointerEntered" PointerExited="Grid_PointerExited">
+                <GridView x:Name="gridView" ScrollViewer.VerticalScrollMode="Disabled" MinHeight="200" ItemsSource="{x:Bind songs}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="40,40,40,40" SelectionMode="None" IsItemClickEnabled="True" ItemClick="ListView_ItemClick" ItemContainerTransitions="{x:Null}"  ContainerContentChanging="gridView_ContainerContentChanging" ItemContainerStyle="{StaticResource mySonGridViewItem}">
+                  <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="model:MusicItem">
+                            <Grid Width="560" Height="52" PointerEntered="Grid_PointerEntered" PointerExited="Grid_PointerExited">
                                 <Rectangle Fill="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                                <RelativePanel Name="rp1" >
-                                    <TextBlock Name="TB1" Text="{x:Bind TrackNo}" Width="20" VerticalAlignment="Center" Margin="8,0,0,0" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
+                                <RelativePanel Name="rp1" BorderBrush="White" BorderThickness="0,0,0,2">
+                                    <TextBlock Name="TB1" Text="{x:Bind TrackNumber}" Width="20" VerticalAlignment="Center" Margin="8,0,0,0" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
                                     <TextBlock Name="TB2" Text="{x:Bind Title}" Width="292" VerticalAlignment="Center" Margin="12,0,0,0" MaxWidth="220" RelativePanel.RightOf="TB1" RelativePanel.AlignVerticalCenterWithPanel="True" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{x:Bind Title}"/>
-                                    <Button Name="B1" Content="&#xE710;" Width="40" FontFamily="Segoe MDL2 Assets" Style="{StaticResource AddToPlayListButton}" RelativePanel.RightOf="TB2" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="8,0,0,0" Click="B1_Click" Background="Transparent" Visibility="Collapsed" ToolTipService.ToolTip="Add to Now Playing"/>
+                                    <Button Name="B1" Content="&#xE710;" DataContext="{x:Bind }" Width="40" FontFamily="Segoe MDL2 Assets" Style="{StaticResource AddToPlayListButton}" RelativePanel.RightOf="TB2" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="8,0,0,0" Click="B1_Click" Background="Transparent" Visibility="Collapsed" ToolTipService.ToolTip="Add to Now Playing"/>
                                     <TextBlock Name="TB3" Text="{x:Bind Artist}" Width="100" Margin="12,0,0,0" RelativePanel.LeftOf="TB4" RelativePanel.AlignVerticalCenterWithPanel="True" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{x:Bind Artist}" />
-                                    <TextBlock Name="TB4" Text="{x:Bind Length}" Width="28" Margin="12,0,8,0" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
-                                </RelativePanel>
+                                    <TextBlock Name="TB4" Text="lenght" Width="28" Margin="12,0,8,0" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
+                                </RelativePanel>                               
                             </Grid>
                         </DataTemplate>
                     </GridView.ItemTemplate>
