--- a/MusicFlow/Views/AlbumDetail.xaml
+++ b/MusicFlow/Views/AlbumDetail.xaml
@@ -6,14 +6,17 @@
     xmlns:model="using:MusicFlow.Model"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">    
+    mc:Ignorable="d">
+    <Page.Resources>
+        <model:MusicItemDurationConverter x:Key="DurationConverter" />
+    </Page.Resources>
 
     <Grid Name="rootGrid" >
          <ScrollViewer x:Name="scrollViewer" VerticalScrollBarVisibility="Auto" VerticalScrollMode="Auto" HorizontalAlignment="Stretch">
 
             <StackPanel Orientation="Vertical"  HorizontalAlignment="Stretch">
                 
-                <Grid Name="AlbumInfo" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Margin="40,20,0,20">                      
+                <Grid Name="AlbumInfo" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Margin="40,20,0,20" Loaded="AlbumInfo_Loaded">                      
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
@@ -40,7 +43,7 @@
                                     <TextBlock Name="TB2" Text="{x:Bind Title}" Width="292" VerticalAlignment="Center" Margin="12,0,0,0" MaxWidth="220" RelativePanel.RightOf="TB1" RelativePanel.AlignVerticalCenterWithPanel="True" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{x:Bind Title}"/>
                                     <Button Name="B1" Content="&#xE710;" DataContext="{x:Bind }" Width="40" FontFamily="Segoe MDL2 Assets" Style="{StaticResource AddToPlayListButton}" RelativePanel.RightOf="TB2" RelativePanel.AlignVerticalCenterWithPanel="True" Margin="8,0,0,0" Click="B1_Click" Background="Transparent" Visibility="Collapsed" ToolTipService.ToolTip="Add to Now Playing"/>
                                     <TextBlock Name="TB3" Text="{x:Bind Artist}" Width="100" Margin="12,0,0,0" RelativePanel.LeftOf="TB4" RelativePanel.AlignVerticalCenterWithPanel="True" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{x:Bind Artist}" />
-                                    <TextBlock Name="TB4" Text="lenght" Width="28" Margin="12,0,8,0" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
+                                    <TextBlock Name="TB4" Text="{x:Bind Duration,Converter={StaticResource ResourceKey=DurationConverter}}" Width="36" Margin="12,0,8,0" RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignVerticalCenterWithPanel="True"/>
                                 </RelativePanel>                               
                             </Grid>
                         </DataTemplate>
