--- a/MusicFlow/Views/AlbumView.xaml
+++ b/MusicFlow/Views/AlbumView.xaml
@@ -5,44 +5,25 @@
       xmlns:model="using:MusicFlow.Model"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      mc:Ignorable="d">
-
-    <Page.Resources>
-
-    </Page.Resources>
+      mc:Ignorable="d">    
 
     <Grid Name="RootScrollViewer">
-
         <TextBlock Text="Albums" FontSize="32" Margin="20,-8,20,12" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" />
-
-        <GridView Visibility="Visible" Name="albumView" ItemsSource="{x:Bind albumList}" SelectionMode="Extended" IsItemClickEnabled="True" ItemClick="albumView_ItemClick" Margin="10,36,0,0" ContainerContentChanging="AlbumView_ContainerContentChanging" ItemContainerTransitions="{x:Null}" Loaded="albumView_Loaded" CanDragItems="True" DragItemsStarting="albumView_DragItemsStarting" >
-            <GridView.ItemContainerStyle>
-                <Style TargetType="GridViewItem">
-                    <Setter Property="Margin" Value="8" />
-                    <Setter Property="BorderBrush" Value="White" />
-                    <Setter Property="BorderThickness" Value="4" />
-                </Style>
-            </GridView.ItemContainerStyle>
+        <GridView Visibility="Visible" Name="albumView" ItemsSource="{x:Bind albumList}" SelectionMode="Extended" IsItemClickEnabled="True" ItemClick="albumView_ItemClick" Margin="10,36,0,0" ContainerContentChanging="AlbumView_ContainerContentChanging" ItemContainerTransitions="{x:Null}" Loaded="albumView_Loaded" CanDragItems="True" DragItemsStarting="albumView_DragItemsStarting" ItemContainerStyle="{StaticResource AlbumViewGridViewItem}">
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="model:MusicItem">
-                    <Grid Name="albumgrid" Height="200" Width="200" ToolTipService.ToolTip="{x:Bind Album}" PointerEntered="albumgrid_PointerEntered" PointerExited="albumgrid_PointerExited">
-                        <Image Name="CoverImage" Source="{x:Bind CoveImagePath}" HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="Uniform" Height="200" Width="200" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True" />
-                        <StackPanel VerticalAlignment="Bottom" Margin="0,0,0,8"  HorizontalAlignment="Left" Orientation="Vertical">
-                            <StackPanel  Background="White" Orientation="Horizontal" HorizontalAlignment="Left">
-                                <TextBlock Text="{x:Bind Album}" Foreground="Black" HorizontalAlignment="Left" MaxWidth="160" VerticalAlignment="Bottom" Margin="4" TextTrimming="CharacterEllipsis" />
-                            </StackPanel>
-                            <StackPanel  Background="White" Orientation="Horizontal" HorizontalAlignment="Left">
-                                <TextBlock Text="{x:Bind AlbumArtist}" FontSize="14" MaxWidth="160" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="4" />
-                            </StackPanel>
-                        </StackPanel>
-                        <Grid Name="PlayButtonGrid" Visibility="Collapsed" HorizontalAlignment="Left" VerticalAlignment="Top"  Height="60" Width="60">
-                            <Button Style="{StaticResource AddToPlayListButton}" Content="&#xE102;" FontSize="28" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" HorizontalAlignment="Center" UseLayoutRounding="True" Background="Transparent" DataContext="{x:Bind }" Click="Button_Click"/>
+                    <Grid Name="albumgrid" Height="208" Width="168" ToolTipService.ToolTip="{x:Bind Album}" PointerEntered="albumgrid_PointerEntered" PointerExited="albumgrid_PointerExited" Padding="4">
+                        <Image Name="CoverImage" Source="{x:Bind CoveImagePath}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="Uniform" Height="160" Width="160" />
+                        <Grid VerticalAlignment="Bottom" HorizontalAlignment="Left" Height="40">
+                             <TextBlock Text="{x:Bind Album}" FontSize="16" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center" TextTrimming="CharacterEllipsis"/>
+                        </Grid>
+                        <Grid Name="PlayButtonGrid" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Top" Height="160" Width="160">
+                            <Button Style="{StaticResource AddToPlayListButton}" Content="&#xE102;" FontSize="28" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Bottom" HorizontalAlignment="Left" Background="Transparent" DataContext="{x:Bind }" Click="Button_Click"/>
                         </Grid>
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
-
     </Grid>
 
 </Page>
