--- a/MusicFlow/Views/BlankPage1.xaml
+++ b/MusicFlow/Views/BlankPage1.xaml
@@ -1,14 +1,17 @@
-﻿<Page
-    x:Class="MusicFlow.Views.BlankPage1"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MusicFlow.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="MusicFlow.Views.BlankPage1" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:MusicFlow.Views" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20" Name="img" Height="900" Width="1600"/>
-        <Button HorizontalAlignment="Center" VerticalAlignment="Bottom" Content="123" Click="Button_Click"/>
+    <Grid Background="Gray">
+        <Rectangle Height="160" Width="160" Stroke="Black">
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0,0">
+                    <LinearGradientBrush.RelativeTransform>
+                        <CompositeTransform CenterY="0.5" CenterX="0.5" Rotation="445" TranslateX="1.2" SkewX="1" SkewY="1" ScaleX="1.2" TranslateY="0.5" />
+                    </LinearGradientBrush.RelativeTransform>
+                    <GradientStop Color="#CC000000" Offset="1" />
+                    <GradientStop Color="White" Offset="0.5" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+
     </Grid>
 </Page>
